# NeuralFramework

./: NeuralFramework.sln  README.md
NeuralFramework/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  LICENSE  Layer.h  Loss.cpp  Loss.h  Matrix.cpp  Matrix.h  Model.cpp  Model.h  NeuralFramework.cpp  NeuralFramework.vcxproj  NeuralFramework.vcxproj.filters
NeuralFramework/cmake/: NeuralFrameworkConfig.cmake.in
NeuralFramework/examples/: main.cpp
NeuralFramework/vcpkg/ports/neuralframework/: portfile.cmake  vcpkg.json
NeuralFramework/x64/Debug/: NeuralFramework.exe.recipe  NeuralFramework.ilk  vc143.idb
NeuralFramework/x64/Debug/NeuralFramework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  NeuralFramework.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-nf/: CMakeCache.txt
